# talentscout-x

./: .gitignore  AI_RESPONSES.md  CALENDAR_INVITES.md  DEMO_MODE.md  FRONTEND_MESSAGES_FIX.md  GROK.md  IMPLEMENTATION_SUMMARY.md  MESSAGING_GUIDE.md  QUICK_START.md  README.md  TROUBLESHOOTING_MESSAGES.md  TWITTER_OAUTH_SETUP.md  claude.md  dev.db-journal  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  schema.prisma  seed.py  test_ai_message.json  test_calendar_event.json  test_demo_message.json  test_demo_message2.json  test_event.json  test_invite.ics  test_message.json  test_message2.json  test_schedule_message.json
.github/workflows/: ci.yml
app/: main.py
app/config/: settings.py
app/db/: database.py
app/models/: scout.py
app/routers/: scout.py
app/services/: ai_service.py  ingestion.py
backend/api/: routes.py
backend/config/: settings.py  userPersonas.py
backend/models/: schemas.py
backend/services/: calendar_service.py  grok_service.py  talent_service.py  twitter_oauth_service.py  twitter_service.py
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: CandidateCard.tsx  CandidateFeed.tsx  CandidateProfile.tsx  Feedback.tsx  FilterModal.tsx  JobSearchForm.tsx  Messages.tsx  Pipeline.tsx  ScheduleModal.tsx  Settings.tsx  TwitterAuth.tsx
frontend/src/config/: roles.ts  userPersonas.ts
frontend/src/styles/: globals.css
scripts/: get_twitter_user_token.py  populate.py
tests/: test_scout.py
