[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --cov=app --cov-report=term-missing --cov-report=xml"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "talentscout-x"
version = "0.1.0"
dependencies = [
  "fastapi==0.115.0",
  "uvicorn[standard]==0.31.1",
  "aiosqlite==0.20.0",
  "tweepy==4.16.0",
  "openai==1.51.0",
  "python-dotenv==1.0.1",
  "pydantic-settings==2.5.2",
]

[project.optional-dependencies]
test = [
  "pytest==8.3.3",
  "pytest-asyncio==0.24.0",
  "httpx==0.27.2",
]